# cosmos-airdrop

./: .gitignore  Cargo.toml
src/: lib.rs  payments.rs
tests/: airdrop.rs
tests/utils/: mod.rs
