[package]
name = "cosmos-airdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
ocular = { path = "../ocular", features = ["tx"] }
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"

[dev-dependencies]
futures = { version = "0.3.24", features = ["executor"] }
k256 = { version = "0.11.4", features = ["pem"] }
pkcs8 = { version = "0.9.0", features = ["pem"] }
prost = "0.11.0"
prost-types = "0.11.1"
rand = "0.8.5"
tokio = "1.21"
